fix paths in Dockerfile